# SPXIlib

./: CMakeLists.txt  FILESPEC.md  LICENSE.txt  README.md
src/: SPXI_lib.c  SPXI_lib.h
